Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -421,3 +421,4 @@ Temporary commit content 2909
 Temporary commit content 2938
 Temporary commit content 2943
 Temporary commit content 2963
+Temporary commit content 2969
