Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -401,3 +401,4 @@ Temporary commit content 2661
 Temporary commit content 2699
 Temporary commit content 2701
 Temporary commit content 2749
+Temporary commit content 2765
