Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -400,3 +400,4 @@ Temporary commit content 2631
 Temporary commit content 2661
 Temporary commit content 2699
 Temporary commit content 2701
+Temporary commit content 2749
