Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -424,3 +424,4 @@ Temporary commit content 2963
 Temporary commit content 2969
 Temporary commit content 2974
 Temporary commit content 2975
+Temporary commit content 2976
