Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -418,3 +418,4 @@ Temporary commit content 2901
 Temporary commit content 2903
 Temporary commit content 2907
 Temporary commit content 2909
+Temporary commit content 2938
