Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -422,3 +422,4 @@ Temporary commit content 2938
 Temporary commit content 2943
 Temporary commit content 2963
 Temporary commit content 2969
+Temporary commit content 2974
