Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -416,3 +416,4 @@ Temporary commit content 2874
 Temporary commit content 2892
 Temporary commit content 2901
 Temporary commit content 2903
+Temporary commit content 2907
