Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -406,3 +406,4 @@ Temporary commit content 2771
 Temporary commit content 2779
 Temporary commit content 2793
 Temporary commit content 2799
+Temporary commit content 2842
