Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -422,3 +422,4 @@ Temporary commit content 2945
 Temporary commit content 2950
 Temporary commit content 2958
 Temporary commit content 2968
+Temporary commit content 2994
