Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -403,3 +403,4 @@ Temporary commit content 2701
 Temporary commit content 2749
 Temporary commit content 2765
 Temporary commit content 2771
+Temporary commit content 2779
