--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -412,3 +412,4 @@ Temporary commit content 2810
 Temporary commit content 2824
 Temporary commit content 2840
 Temporary commit content 2855
+Temporary commit content 2874
