--- a/edt/config.json
+++ b/edt/config.json
@@ -412,3 +412,4 @@ Temporary commit content 2861
 Temporary commit content 2878
 Temporary commit content 2881
 Temporary commit content 2882
+Temporary commit content 2887
