Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -420,3 +420,4 @@ Temporary commit content 2920
 Temporary commit content 2927
 Temporary commit content 2945
 Temporary commit content 2950
+Temporary commit content 2958
