Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -419,3 +419,4 @@ Temporary commit content 2903
 Temporary commit content 2907
 Temporary commit content 2909
 Temporary commit content 2938
+Temporary commit content 2943
