Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -402,3 +402,4 @@ Temporary commit content 2699
 Temporary commit content 2701
 Temporary commit content 2749
 Temporary commit content 2765
+Temporary commit content 2771
