Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -399,3 +399,4 @@ Temporary commit content 2629
 Temporary commit content 2631
 Temporary commit content 2661
 Temporary commit content 2699
+Temporary commit content 2701
