Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -404,3 +404,4 @@ Temporary commit content 2749
 Temporary commit content 2765
 Temporary commit content 2771
 Temporary commit content 2779
+Temporary commit content 2793
