Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -404,3 +404,4 @@ Temporary commit content 2676
 Temporary commit content 2691
 Temporary commit content 2703
 Temporary commit content 2709
+Temporary commit content 2712
