Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -409,3 +409,4 @@ Temporary commit content 2741
 Temporary commit content 2747
 Temporary commit content 2803
 Temporary commit content 2810
+Temporary commit content 2824
