Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -415,3 +415,4 @@ Temporary commit content 2882
 Temporary commit content 2887
 Temporary commit content 2891
 Temporary commit content 2902
+Temporary commit content 2904
