--- a/edt/config.json
+++ b/edt/config.json
@@ -418,3 +418,4 @@ Temporary commit content 2902
 Temporary commit content 2904
 Temporary commit content 2920
 Temporary commit content 2927
+Temporary commit content 2945
