Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -410,3 +410,4 @@ Temporary commit content 2747
 Temporary commit content 2803
 Temporary commit content 2810
 Temporary commit content 2824
+Temporary commit content 2840
