Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -409,3 +409,4 @@ Temporary commit content 2799
 Temporary commit content 2842
 Temporary commit content 2853
 Temporary commit content 2861
+Temporary commit content 2878
