Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -414,3 +414,4 @@ Temporary commit content 2840
 Temporary commit content 2855
 Temporary commit content 2874
 Temporary commit content 2892
+Temporary commit content 2901
