Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -416,3 +416,4 @@ Temporary commit content 2887
 Temporary commit content 2891
 Temporary commit content 2902
 Temporary commit content 2904
+Temporary commit content 2920
