Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -405,3 +405,4 @@ Temporary commit content 2765
 Temporary commit content 2771
 Temporary commit content 2779
 Temporary commit content 2793
+Temporary commit content 2799
