Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -421,3 +421,4 @@ Temporary commit content 2927
 Temporary commit content 2945
 Temporary commit content 2950
 Temporary commit content 2958
+Temporary commit content 2968
