Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -420,3 +420,4 @@ Temporary commit content 2907
 Temporary commit content 2909
 Temporary commit content 2938
 Temporary commit content 2943
+Temporary commit content 2963
