Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -419,3 +419,4 @@ Temporary commit content 2904
 Temporary commit content 2920
 Temporary commit content 2927
 Temporary commit content 2945
+Temporary commit content 2950
