Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -415,3 +415,4 @@ Temporary commit content 2855
 Temporary commit content 2874
 Temporary commit content 2892
 Temporary commit content 2901
+Temporary commit content 2903
